refactoring: delete blockingSubscribe method from RetrofitPictureOfTheDayRepo

--- a/app/src/main/res/layout/bottom_sheet.xml
+++ b/app/src/main/res/layout/bottom_sheet.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/bottom_sheet_container"
     android:layout_width="match_parent"
-    android:layout_height="300dp"
+    android:layout_height="wrap_content"
     android:background="#f6f6fa"
     app:behavior_hideable="true"
     app:behavior_peekHeight="50dp"
