--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -3,9 +3,17 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
+        android:id="@+id/settings_menu_item"
+        android:title="Настройки"
+        android:icon="@drawable/ic_settings"
+        app:showAsAction="ifRoom"
+        android:iconTint="@color/white" />
+
+    <item
         android:id="@+id/wiki_menu_item"
         android:title="@string/wikipedia"
         android:icon="@drawable/ic_wikipedia"
-        app:showAsAction="always"
+        app:showAsAction="ifRoom"
         android:iconTint="@color/white" />
+
 </menu>
