--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,16 +1,65 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.PictureOfTheDay" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+    <style name="Theme.Moon" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_500</item>
-        <item name="colorPrimaryVariant">@color/purple_700</item>
-        <item name="colorOnPrimary">@color/white</item>
+        <item name="colorPrimary">@color/snuff</item>
+        <item name="colorPrimaryVariant">@color/chatelle</item>
+        <item name="colorPrimaryDark">@color/chatelle</item>
+        <item name="colorPrimarySurface">@color/white</item>
+        <item name="colorOnPrimary">@color/black</item>
+        <item name="colorSurface">?colorPrimarySurface</item>
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/teal_200</item>
-        <item name="colorSecondaryVariant">@color/teal_700</item>
-        <item name="colorOnSecondary">@color/black</item>
+        <item name="colorSecondary">@color/malibu</item>
+        <item name="colorSecondaryVariant">@color/indigo</item>
+        <item name="colorOnSecondary">@color/white</item>
+        <!-- Background color. -->
+        <item name="android:windowBackground">@color/color_gray</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
-        <!-- Customize your theme here. -->
+        <!-- Window animation -->
+        <item name="android:windowAnimationStyle">@style/WindowAnimationTransition</item>
     </style>
+
+    <style name="Theme.Mars" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+        <!-- Primary brand color. -->
+        <item name="colorPrimary">@color/tall_poppy</item>
+        <item name="colorPrimaryVariant">@color/cod_gray</item>
+        <item name="colorPrimaryDark">@color/sangria</item>
+        <item name="colorPrimarySurface">?colorPrimary</item>
+        <item name="colorOnPrimary">@color/white</item>
+        <item name="colorSurface">@color/persian_red</item>
+        <!-- Secondary brand color. -->
+        <item name="colorSecondary">@color/trinidad</item>
+        <item name="colorSecondaryVariant">@color/blaze_orange</item>
+        <item name="colorOnSecondary">@color/white</item>
+        <!-- Status bar color. -->
+        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryDark</item>
+        <!-- Background color. -->
+        <item name="android:windowBackground">?colorPrimaryVariant</item>
+        <!-- Window animation -->
+        <item name="android:windowAnimationStyle">@style/WindowAnimationTransition</item>
+    </style>
+
+    <style name="WindowAnimationTransition">
+        <item name="android:windowEnterAnimation">@android:anim/fade_in</item>
+        <item name="android:windowExitAnimation">@android:anim/fade_out</item>
+        <item name="android:fragmentEnterTransition">@android:anim/fade_in</item>
+        <item name="android:fragmentExitTransition">@android:anim/fade_out</item>
+    </style>
+
+    <style name="Widget.App.Chip" parent="Widget.MaterialComponents.Chip.Choice">
+        <item name="chipBackgroundColor">@color/chip_background_color</item>
+        <item name="android:textColor">?colorOnSecondary</item>
+    </style>
+
+    <style name="Widget.App.Chip.NightMode" parent="Widget.MaterialComponents.Chip.Filter">
+        <item name="chipBackgroundColor">@color/chip_background_color</item>
+        <item name="android:textColor">?colorOnSecondary</item>
+    </style>
+
+    <style name="MyTextInputLayout" parent = "Widget.MaterialComponents.TextInputLayout.OutlinedBox">
+        <item name="boxBackgroundColor">?colorSurface</item>
+        <item name="helperTextTextColor">?colorPrimaryDark</item>
+    </style>
+
 </resources>
