--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -18,6 +18,8 @@
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Window animation -->
         <item name="android:windowAnimationStyle">@style/WindowAnimationTransition</item>
+        <!-- Bottom navigation -->
+        <item name="bottomNavigationStyle">@style/MyBottomNavigationStyle</item>
     </style>
 
     <style name="Theme.Mars" parent="Theme.MaterialComponents.DayNight.NoActionBar">
@@ -38,6 +40,13 @@
         <item name="android:windowBackground">?colorPrimaryVariant</item>
         <!-- Window animation -->
         <item name="android:windowAnimationStyle">@style/WindowAnimationTransition</item>
+        <!-- Bottom navigation -->
+        <item name="bottomNavigationStyle">@style/MyBottomNavigationStyle</item>
+    </style>
+
+    <style name="MyBottomNavigationStyle" parent = "Widget.MaterialComponents.BottomNavigationView">
+        <item name="itemIconTint">@color/bottom_menu_item_color</item>
+        <item name="itemTextColor">@color/bottom_menu_item_color</item>
     </style>
 
     <style name="WindowAnimationTransition">
