--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -6,14 +6,14 @@
         android:id="@+id/settings_menu_item"
         android:title="Настройки"
         android:icon="@drawable/ic_settings"
-        app:showAsAction="ifRoom"
+        app:showAsAction="never"
         android:iconTint="@color/white" />
 
     <item
         android:id="@+id/wiki_menu_item"
         android:title="@string/wikipedia"
         android:icon="@drawable/ic_wikipedia"
-        app:showAsAction="ifRoom"
+        app:showAsAction="never"
         android:iconTint="@color/white" />
 
 </menu>
