--- a/app/src/main/res/xml/motion_scene.xml
+++ b/app/src/main/res/xml/motion_scene.xml
@@ -1,10 +1,71 @@
 <?xml version="1.0" encoding="utf-8"?>
-<MotionScene xmlns:motion="http://schemas.android.com/apk/res-auto">
+<MotionScene xmlns:motion="http://schemas.android.com/apk/res-auto"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/tools"
+    app:ignore="NamespaceTypo">
 
+    <!-- right to left-->
     <Transition
-        motion:constraintSetEnd="@layout/fragment_wiki_search"
-        motion:constraintSetStart="@layout/fragment_wiki_search_start"
-        motion:duration="1000">
-
+        motion:constraintSetEnd="@id/step2"
+        motion:constraintSetStart="@id/step1"
+        motion:duration="500">
+        <OnSwipe
+            motion:dragDirection="dragLeft"
+            motion:touchAnchorId="@id/input_layout"
+            motion:touchAnchorSide="left" />
     </Transition>
+
+    <!-- left to right -->
+    <Transition
+        motion:constraintSetEnd="@id/step1"
+        motion:constraintSetStart="@id/step2"
+        motion:duration="500">
+        <OnSwipe
+            motion:dragDirection="dragRight"
+            motion:touchAnchorId="@id/input_layout"
+            motion:touchAnchorSide="right" />
+    </Transition>
+
+    <!-- place the view to right -->
+    <ConstraintSet android:id="@+id/step2">
+        <Constraint
+            android:id="@+id/input_layout"
+            style="@style/MyTextInputLayout"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:hint="@string/search_wiki"
+            app:counterEnabled="true"
+            app:counterMaxLength="20"
+            app:endIconCheckable="true"
+            app:endIconDrawable="@drawable/ic_wikipedia"
+            app:endIconMode="custom"
+            app:helperText="@string/wiki_helper_text"
+            motion:layout_constraintTop_toTopOf="parent"
+            motion:layout_constraintStart_toEndOf="parent"
+            motion:layout_constraintEnd_toEndOf="parent">
+            <PropertySet android:alpha="1" />
+        </Constraint>
+    </ConstraintSet>
+
+    <!-- place the view in center-->
+    <ConstraintSet android:id="@+id/step1">
+        <Constraint
+            android:id="@+id/input_layout"
+            style="@style/MyTextInputLayout"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:hint="@string/search_wiki"
+            app:counterEnabled="true"
+            app:counterMaxLength="20"
+            app:endIconCheckable="true"
+            app:endIconDrawable="@drawable/ic_wikipedia"
+            app:endIconMode="custom"
+            app:helperText="@string/wiki_helper_text"
+            motion:layout_constraintTop_toTopOf="parent"
+            motion:layout_constraintEnd_toEndOf="parent"
+            motion:layout_constraintStart_toStartOf="parent">
+            <PropertySet android:alpha="1" />
+        </Constraint>
+    </ConstraintSet>
+
 </MotionScene>
