--- a/app/src/main/res/xml/motion_scene.xml
+++ b/app/src/main/res/xml/motion_scene.xml
@@ -4,10 +4,20 @@
     xmlns:app="http://schemas.android.com/tools"
     app:ignore="NamespaceTypo">
 
-    <!-- right to left-->
+    <!-- left to right -->
     <Transition
         motion:constraintSetEnd="@id/step2"
         motion:constraintSetStart="@id/step1"
+        motion:duration="500">
+        <OnSwipe
+            motion:dragDirection="dragRight"
+            motion:touchAnchorId="@id/input_layout"
+            motion:touchAnchorSide="middle" />
+    </Transition>
+    <!-- right to left-->
+    <Transition
+        motion:constraintSetEnd="@id/step1"
+        motion:constraintSetStart="@id/step2"
         motion:duration="500">
         <OnSwipe
             motion:dragDirection="dragLeft"
@@ -15,37 +25,7 @@
             motion:touchAnchorSide="left" />
     </Transition>
 
-    <!-- left to right -->
-    <Transition
-        motion:constraintSetEnd="@id/step1"
-        motion:constraintSetStart="@id/step2"
-        motion:duration="500">
-        <OnSwipe
-            motion:dragDirection="dragRight"
-            motion:touchAnchorId="@id/input_layout"
-            motion:touchAnchorSide="right" />
-    </Transition>
 
-    <!-- place the view to right -->
-    <ConstraintSet android:id="@+id/step2">
-        <Constraint
-            android:id="@+id/input_layout"
-            style="@style/MyTextInputLayout"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:hint="@string/search_wiki"
-            app:counterEnabled="true"
-            app:counterMaxLength="20"
-            app:endIconCheckable="true"
-            app:endIconDrawable="@drawable/ic_wikipedia"
-            app:endIconMode="custom"
-            app:helperText="@string/wiki_helper_text"
-            motion:layout_constraintTop_toTopOf="parent"
-            motion:layout_constraintStart_toEndOf="parent"
-            motion:layout_constraintEnd_toEndOf="parent">
-            <PropertySet android:alpha="1" />
-        </Constraint>
-    </ConstraintSet>
 
     <!-- place the view in center-->
     <ConstraintSet android:id="@+id/step1">
@@ -54,17 +34,59 @@
             style="@style/MyTextInputLayout"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            motion:layout_constraintTop_toTopOf="parent"
+            motion:layout_constraintEnd_toEndOf="parent"
+            motion:layout_constraintStart_toStartOf="parent"
             android:hint="@string/search_wiki"
             app:counterEnabled="true"
             app:counterMaxLength="20"
             app:endIconCheckable="true"
             app:endIconDrawable="@drawable/ic_wikipedia"
             app:endIconMode="custom"
-            app:helperText="@string/wiki_helper_text"
-            motion:layout_constraintTop_toTopOf="parent"
-            motion:layout_constraintEnd_toEndOf="parent"
-            motion:layout_constraintStart_toStartOf="parent">
+            app:helperText="@string/wiki_helper_text">
             <PropertySet android:alpha="1" />
+
+        </Constraint>
+        <Constraint
+            android:id="@+id/wiki_web_view"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:backgroundTint="?android:windowBackground"
+            motion:layout_constraintBottom_toBottomOf="parent"
+            motion:layout_constraintEnd_toEndOf="parent"
+            motion:layout_constraintStart_toStartOf="parent"
+            motion:layout_constraintTop_toBottomOf="@id/input_layout">
+        </Constraint>
+    </ConstraintSet>
+
+    <!-- place the view to right -->
+    <ConstraintSet android:id="@+id/step2">
+        <Constraint
+            android:id="@+id/input_layout"
+            style="@style/MyTextInputLayout"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            motion:layout_constraintTop_toTopOf="parent"
+            motion:layout_constraintStart_toEndOf="parent"
+            android:hint="@string/search_wiki"
+            app:counterEnabled="true"
+            app:counterMaxLength="20"
+            app:endIconCheckable="true"
+            app:endIconDrawable="@drawable/ic_wikipedia"
+            app:endIconMode="custom"
+            app:helperText="@string/wiki_helper_text">
+
+            <PropertySet android:alpha="1" />
+        </Constraint>
+        <Constraint
+            android:id="@+id/wiki_web_view"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:backgroundTint="?android:windowBackground"
+            motion:layout_constraintBottom_toBottomOf="parent"
+            motion:layout_constraintEnd_toEndOf="parent"
+            motion:layout_constraintStart_toStartOf="parent"
+            motion:layout_constraintTop_toTopOf="parent">
         </Constraint>
     </ConstraintSet>
 
