--- a/app/src/main/res/layout/fragment_picture_of_the_day_end.xml
+++ b/app/src/main/res/layout/fragment_picture_of_the_day_end.xml
@@ -31,7 +31,6 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/ic_no_photo_vector"
             android:background="@android:color/transparent"/>
 
 
@@ -81,6 +80,15 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
 
+        <androidx.core.widget.NestedScrollView
+            android:id="@+id/pod_description_scroll_view"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            app:layout_constraintHeight_percent="0.4"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent">
+
         <TextView
             android:id="@+id/pod_description"
             android:layout_width="wrap_content"
@@ -96,7 +104,10 @@
             android:fontFamily="@font/p_t_serif_regular"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent" />
+            app:layout_constraintRight_toRightOf="parent"/>
+
+        </androidx.core.widget.NestedScrollView>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
 
