--- a/app/src/main/res/layout/fragment_notes_recycler_item.xml
+++ b/app/src/main/res/layout/fragment_notes_recycler_item.xml
@@ -16,8 +16,8 @@
         android:paddingBottom="10dp"
         android:paddingStart="10dp"
         android:text="Note"
-        android:textSize="25sp"
-        android:textStyle="bold"
+        android:textSize="20sp"
+        android:fontFamily="?mainFont"
         app:layout_constraintEnd_toStartOf="@+id/editImageView"
         app:layout_constraintStart_toStartOf="@+id/itemContainer"
         app:layout_constraintTop_toTopOf="@+id/itemContainer" />
@@ -35,8 +35,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:padding="10dp"
-        android:text="Марс — четвёртая по удалённости от Солнца и седьмая по размерам планета Солнечной системы. Названа в честь Марса — древнеримского бога войны, соответствующего древнегреческому Аресу. Иногда Марс называют «красной планетой» из-за красноватого оттенка поверхности, придаваемого ей минералом маггемитом (оксидом железа)."
-        android:textColor="#000"
+        android:fontFamily="?mainFont"
+        android:textColor="?colorOnPrimary"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/noteTextView"
         tools:visibility="visible" />
@@ -47,7 +47,8 @@
         android:layout_height="wrap_content"
         android:padding="10dp"
         android:textSize="12sp"
-        android:textColor="#000"
+        android:fontFamily="?mainFont"
+        android:textColor="?colorOnPrimary"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/noteDescriptionTextView"
         tools:visibility="visible" />
@@ -89,7 +90,7 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="1px"
-        android:background="#000"
+        android:background="?colorOnPrimary"
         app:layout_constraintBottom_toBottomOf="@+id/itemContainer"
         app:layout_constraintStart_toStartOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
