--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -23,6 +23,9 @@
         <item name="bottomNavigationStyle">@style/MyBottomNavigationStyle</item>
 
         <item name="collapsedTitleTextAppearance">?colorOnPrimary</item>
+        <!-- Font -->
+        <item name="mainFont">@font/open_sans</item>
+        <item name="mainFontBoldItalic">@font/open_sans_bold_italic</item>
     </style>
 
     <style name="Theme.Mars" parent="Theme.MaterialComponents.DayNight.NoActionBar">
@@ -46,7 +49,16 @@
         <item name="android:windowAnimationStyle">@style/WindowAnimationTransition</item>
         <!-- Bottom navigation -->
         <item name="bottomNavigationStyle">@style/MyBottomNavigationStyle</item>
+        <!-- Font -->
+        <item name="mainFont">@font/open_sans</item>
+        <item name="mainFontBoldItalic">@font/open_sans_bold_italic</item>
 
+    </style>
+
+    <style name="TitleBarTextAppearance" parent="android:TextAppearance">
+        <item name="android:fontFamily">@font/open_sans_bold_italic</item>
+        <item name="android:textSize">20sp</item>
+        <item name="android:textColor">?colorOnSecondary</item>
     </style>
 
     <style name="ExpandedAppBar" parent="TextAppearance.Design.CollapsingToolbar.Expanded">
