--- a/app/src/main/res/layout/fragment_picture_of_the_day_start.xml
+++ b/app/src/main/res/layout/fragment_picture_of_the_day_start.xml
@@ -21,7 +21,7 @@
 
     </WebView>
 
-    <com.lenatopoleva.pictureoftheday.ui.custom.EquilateralImageView
+    <ImageView
         android:id="@+id/image_view"
         android:layout_width="match_parent"
         android:layout_height="0dp"
@@ -94,10 +94,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="?colorPrimary"
-            android:gravity="center"
             android:paddingTop="8dp"
-            android:paddingStart="8dp"
-            android:paddingEnd="8dp"
+            android:paddingStart="15dp"
+            android:paddingEnd="15dp"
             android:paddingBottom="8dp"
             android:textColor="?colorOnPrimary"
             android:textSize="12sp"
