--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -49,10 +49,17 @@
         <item name="android:windowAnimationStyle">@style/WindowAnimationTransition</item>
         <!-- Bottom navigation -->
         <item name="bottomNavigationStyle">@style/MyBottomNavigationStyle</item>
+        <!-- Android navigation bar -->
+        <item name="android:navigationBarColor">@color/black</item>
         <!-- Font -->
         <item name="mainFont">@font/open_sans</item>
         <item name="mainFontBoldItalic">@font/open_sans_bold_italic</item>
+    </style>
 
+    <style name="Theme_Splash">
+        <item name="android:statusBarColor" tools:targetApi="l">@color/black</item>
+        <item name="android:windowBackground">@color/black</item>
+        <item name="android:navigationBarColor">@color/black</item>
     </style>
 
     <style name="TitleBarTextAppearance" parent="android:TextAppearance">
