--- a/app/src/main/res/layout/dialog_fragment_note.xml
+++ b/app/src/main/res/layout/dialog_fragment_note.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="?colorSurface">
 
     <EditText
         android:id="@+id/note_title_edit_text"
@@ -12,6 +12,7 @@
         android:layout_margin="15dp"
         android:hint="@string/note_title"
         android:fontFamily="?mainFont"
+        android:textColor="?colorOnPrimaryWithAlfa"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -23,6 +24,7 @@
         android:layout_margin="15dp"
         android:hint="@string/note_body"
         android:fontFamily="?mainFont"
+        android:textColor="?colorOnPrimaryWithAlfa"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/note_title_edit_text" />
@@ -32,6 +34,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/save_btn"
+        style="@style/Theme.Button"
         android:fontFamily="?mainFont"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -44,6 +47,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/cancel_btn"
+        style="@style/Theme.Button"
         android:fontFamily="?mainFont"
         app:layout_constraintEnd_toStartOf="@+id/btnYes"
         app:layout_constraintHorizontal_bias="0.5"
