--- a/app/src/main/res/layout/fragment_notes_recycler_header.xml
+++ b/app/src/main/res/layout/fragment_notes_recycler_header.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@android:color/white">
+    android:background="?colorSurface">
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/header"
@@ -11,7 +11,7 @@
         android:layout_height="wrap_content"
         android:padding="15dp"
         android:text="@string/notes_header"
-        android:textColor="?colorSecondary"
+        android:textColor="?colorOnPrimary"
         android:textSize="25sp"
         android:textStyle="bold"
         android:fontFamily="?mainFontBoldItalic"
@@ -22,7 +22,7 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="1px"
-        android:background="#000"
+        android:background="?colorPrimaryVariant"
         app:layout_constraintBottom_toBottomOf="@+id/header"
         app:layout_constraintStart_toStartOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
