--- a/app/src/main/res/layout/fragment_notes_recycler_item.xml
+++ b/app/src/main/res/layout/fragment_notes_recycler_item.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/itemContainer"
-    android:background="@android:color/white"
+    android:background="?colorSurface"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
@@ -18,6 +18,7 @@
         android:text="Note"
         android:textSize="20sp"
         android:fontFamily="?mainFont"
+        android:textColor="?colorOnPrimaryWithAlfa"
         app:layout_constraintEnd_toStartOf="@+id/editImageView"
         app:layout_constraintStart_toStartOf="@+id/itemContainer"
         app:layout_constraintTop_toTopOf="@+id/itemContainer" />
@@ -36,7 +37,7 @@
         android:layout_height="wrap_content"
         android:padding="10dp"
         android:fontFamily="?mainFont"
-        android:textColor="?colorOnPrimary"
+        android:textColor="?colorOnPrimaryWithAlfa"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/noteTextView"
         tools:visibility="visible" />
@@ -48,7 +49,7 @@
         android:padding="10dp"
         android:textSize="12sp"
         android:fontFamily="?mainFont"
-        android:textColor="?colorOnPrimary"
+        android:textColor="?colorOnPrimaryWithAlfa"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/noteDescriptionTextView"
         tools:visibility="visible" />
@@ -58,7 +59,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="15dp"
-        android:tint="@color/cardview_shadow_start_color"
+        android:tint="?colorPrimaryDark"
         app:layout_constraintBottom_toBottomOf="@+id/noteTextView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/noteTextView"
@@ -69,7 +70,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="15dp"
-        android:tint="@color/cardview_shadow_start_color"
+        android:tint="?colorPrimaryDark"
         app:layout_constraintEnd_toStartOf="@+id/dragHandleImageView"
         app:layout_constraintTop_toTopOf="@+id/noteTextView"
         app:layout_constraintBottom_toBottomOf="@+id/noteTextView"
@@ -81,7 +82,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="15dp"
-        android:tint="@color/cardview_shadow_start_color"
+        android:tint="?colorPrimaryDark"
         app:layout_constraintBottom_toBottomOf="@+id/noteTextView"
         app:layout_constraintEnd_toStartOf="@+id/removeItemImageView"
         app:layout_constraintTop_toTopOf="@+id/noteTextView"
@@ -90,7 +91,7 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="1px"
-        android:background="?colorOnPrimary"
+        android:background="?colorPrimaryVariant"
         app:layout_constraintBottom_toBottomOf="@+id/itemContainer"
         app:layout_constraintStart_toStartOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
