--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
         <attr name="colorSecondaryWithAlfa" format="reference" />
+        <attr name="colorOnPrimaryWithAlfa" format="reference" />
+        <attr name="viewPagerBackgroundColor" format="reference" />
         <attr name="mainFont" format="reference" />
         <attr name="mainFontBoldItalic" format="reference" />
 </resources>
