--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,7 +6,9 @@
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
+    <color name="alfa_black">#BE000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="alfa_white">#C4FFFFFF</color>
     <color name="color_gray">#DCDCDC</color>
     <color name="cod_gray">#131313</color>
     <color name="sangria">#9a0007</color>
